# multimedia_av_session

./: CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  av_session_ohos_sources.gni  avvolumecomponent_part.gni  bluetooth_part.gni  bundle.json  castplus_cast_engine_part.gni  cfi_blocklist.txt  collaborationfwk_part.gni  config.gni  efficiency_manager_part.gni  hisysevent.yaml  mediaControlExtension.gni
avinputcastpicker/: BUILD.gn  avinputcastpicker.cpp  avinputcastpicker.ets  avinputcastpicker.js
avpicker/: BUILD.gn  avpicker.cpp  avpicker.ets  avpicker.js  avpicker_mock.ets  avpicker_mock.js  avpickerparam.cpp  avpickerparam.js  avpickerparam_mock.js
avpicker_static/: BUILD.gn
avpicker_static/avpicker/: @ohos.multimedia.avCastPicker.ets  BUILD.gn
avpicker_static/avpicker_mock/: @ohos.multimedia.avCastPicker.ets  BUILD.gn
avvolumecomponent/: BUILD.gn  avvolumecomponent.cpp  avvolumecomponent.ets  avvolumecomponent.js
frameworks/cj/: BUILD.gn
frameworks/cj/include/: cj_avsession_callback.h  cj_avsession_cast_controller_callback.h  cj_avsession_cast_controller_ffi.h  cj_avsession_cast_controller_impl.h  cj_avsession_controller_callback.h  cj_avsession_controller_ffi.h  cj_avsession_controller_impl.h  cj_avsession_ffi.h  cj_avsession_impl.h  cj_avsession_manager_ffi.h  cj_avsession_manager_impl.h  cj_avsession_media_description.h  cj_avsession_prototypes.h  cj_avsession_utils.h
frameworks/cj/src/: cj_avsession_callback.cpp  cj_avsession_cast_controller_callback.cpp  cj_avsession_cast_controller_ffi.cpp  cj_avsession_cast_controller_impl.cpp  cj_avsession_controller_callback.cpp  cj_avsession_controller_ffi.cpp  cj_avsession_controller_impl.cpp  cj_avsession_ffi.cpp  cj_avsession_impl.cpp  cj_avsession_manager_ffi.cpp  cj_avsession_manager_impl.cpp  cj_avsession_media_description.cpp  cj_avsession_utils.cpp
frameworks/common/: BUILD.gn
frameworks/common/src/: av_cast_info.cpp  av_data_src_descriptor.cpp  av_file_descriptor.cpp  av_shared_memory_base.cpp  av_shared_memory_helper.cpp  avcall_meta_data.cpp  avcall_state.cpp  avcast_control_command.cpp  avcast_player_state.cpp  avcontrol_command.cpp  avmedia_description.cpp  avmeta_data.cpp  avplayback_state.cpp  avqueue_info.cpp  avqueue_item.cpp  avsession_descriptor.cpp  avsession_pixel_map.cpp  avsession_pixel_map_adapter.cpp  command_info.cpp  device_info.cpp  media_info.cpp  media_info_holder.cpp  play_info.cpp  play_info_holder.cpp
frameworks/native/ohavsession/: BUILD.gn
frameworks/native/session/: BUILD.gn  avsession_client.versionscript
frameworks/taihe/: BUILD.gn
frameworks/taihe/idl/: ohos.multimedia.avCastPickerParam.taihe  ohos.multimedia.avsession.avSession.taihe  ohos.multimedia.avsession.taihe
frameworks/taihe/include/: taihe_async_callback.h  taihe_avcall_meta_data.h  taihe_avcall_state.h  taihe_avcast_controller.h  taihe_avcast_controller_callback.h  taihe_avcast_picker_helper.h  taihe_avcontroller_callback.h  taihe_avsession.h  taihe_avsession_callback.h  taihe_avsession_controller.h  taihe_avsession_enum.h  taihe_avsession_manager.h  taihe_cast_control_command.h  taihe_control_command.h  taihe_headers.h  taihe_media_description.h  taihe_meta_data.h  taihe_playback_state.h  taihe_queue_item.h  taihe_session_listener.h  taihe_utils.h  taihe_work.h
frameworks/taihe/src/: ani_constructor.cpp  taihe_async_callback.cpp  taihe_avcall_meta_data.cpp  taihe_avcall_state.cpp  taihe_avcast_controller.cpp  taihe_avcast_controller_callback.cpp  taihe_avcast_picker_helper.cpp  taihe_avcontroller_callback.cpp  taihe_avsession.cpp  taihe_avsession_callback.cpp  taihe_avsession_controller.cpp  taihe_avsession_enum.cpp  taihe_avsession_manager.cpp  taihe_cast_control_command.cpp  taihe_control_command.cpp  taihe_media_description.cpp  taihe_meta_data.cpp  taihe_playback_state.cpp  taihe_queue_item.cpp  taihe_session_listener.cpp  taihe_utils.cpp
mediaControlExtension/ModuleLoader/: BUILD.gn  js_media_control_extension.cpp  js_media_control_extension_context.cpp  media_control_extension.cpp  media_control_extension_context.cpp  media_control_extension_module_loader.cpp
services/etc/: BUILD.gn  avsession.para.dac  avsession_service.cfg  avsession_service.rc  config.gni
services/etc/on_demand/: av_session.json  avsession_service.cfg
services/session/: BUILD.gn  avsession_cast_item.versionscript  avsession_item.versionscript  avsession_router.versionscript  avsession_service.versionscript  cfi_blocklist.txt
services/session/adapter/: ability_connect_helper.cpp  ability_connect_helper.h  ability_manager_adapter.cpp  ability_manager_adapter.h  account_manager_adapter.cpp  account_manager_adapter.h  app_manager_adapter.cpp  app_manager_adapter.h  audio_adapter.cpp  audio_adapter.h  avsession_dynamic_bluetooth.cpp  avsession_dynamic_display.cpp  avsession_dynamic_display.h  avsession_dynamic_insight.cpp  avsession_dynamic_insight.h  avsession_dynamic_notification.cpp  avsession_hianalytics_report.cpp  avsession_hianalytics_report.h  bluetooth_adapter.cpp  bluetooth_adapter.h  bundle_status_adapter.cpp  bundle_status_adapter.h  collaboration_manager.cpp  collaboration_manager.h  collaboration_manager_hiplay.cpp  collaboration_manager_hiplay.h  collaboration_manager_urlcasting.cpp  collaboration_manager_urlcasting.h  command_send_limit.cpp  command_send_limit.h  distributed_object_adapter.cpp  distributed_object_adapter.h  extension_connect_helper.cpp  extension_connect_helper.h  key_event_adapter.cpp  (+13 more)
tools/ohos-avsession-manager/: BUILD.gn  config.json
utils/: BUILD.gn  avsession_utils.versionscript
utils/include/: avsession_dynamic_loader.h  avsession_event_handler.h  avsession_log.h  avsession_radar.h  avsession_storage_event.h  avsession_sysevent.h  avsession_timer_holder.h  avsession_trace.h  avsession_utils.h  hash_calculator.h  permission_checker.h  radar_constants.h
utils/src/: avsession_dynamic_loader.cpp  avsession_event_handler.cpp  avsession_radar.cpp  avsession_storage_event.cpp  avsession_sysevent.cpp  avsession_timer_holder.cpp  hash_calculator.cpp  permission_checker.cpp
(+703 files in other folders)
