# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  av_session_enable_start_stop_on_demand = false
  multimedia_av_session_enable_background_audio_control = true
  multimedia_av_session_enable_trace_control = true
  multimedia_av_session_enable_sysevent_control = true
  multimedia_av_session_enable_hicollie = true
  if (defined(global_parts_info) &&
      !defined(global_parts_info.hiviewdfx_hicollie)) {
    multimedia_av_session_enable_hicollie = false
  }
}

commontype_dir = "//foundation/distributeddatamgr/relational_store/interfaces/inner_api/common_type"
