# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/ets_frontend/es2panda/es2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/multimedia/av_session/config.gni")

es2abc_gen_abc("gen_avinputcastpicker_abc") {
  src_js = rebase_path("avinputcastpicker.js")
  dst_file = rebase_path(target_out_dir + "/avinputcastpicker.abc")
  in_puts = [ "avinputcastpicker.js" ]
  out_puts = [ target_out_dir + "/avinputcastpicker.abc" ]
  extra_args = [ "--module" ]
}

gen_js_obj("avinputcastpicker_abc") {
  input = get_label_info(":gen_avinputcastpicker_abc", "target_out_dir") +
          "/avinputcastpicker.abc"
  output = target_out_dir + "/avinputcastpicker_abc.o"
  dep = ":gen_avinputcastpicker_abc"
}

ohos_shared_library("avinputcastpicker") {
  sources = [ "avinputcastpicker.cpp" ]
  deps = [ ":avinputcastpicker_abc" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  external_deps = [ "napi:ace_napi" ]

  relative_install_dir = "module/multimedia"
  subsystem_name = "multimedia"
  part_name = "av_session"
}