# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/config/components/ace_engine/ace_gen_obj.gni")

group("avpicker_static") {
  deps = []
  if (use_mingw_win || use_mac || use_linux) {
    deps += [
      "avpicker_mock:av_cast_picker_mock",
    ]
  } else {
    deps += [
      "avpicker:av_cast_picker",
    ]
  }
}
