# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/ets_frontend/es2panda/es2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/adapter/preview/build/config.gni")
import("//foundation/arkui/ace_engine/build/ace_gen_obj.gni")
import("//foundation/multimedia/av_session/config.gni")

es2abc_gen_abc("gen_avvolumecomponent_abc") {
  src_js = rebase_path("avvolumecomponent.js")
  dst_file = rebase_path(target_out_dir + "/avvolumecomponent.abc")
  in_puts = [ "avvolumecomponent.js" ]
  out_puts = [ target_out_dir + "/avvolumecomponent.abc" ]
  extra_args = [ "--module" ]
}

gen_js_obj("avvolumecomponent_abc") {
  input = get_label_info(":gen_avvolumecomponent_abc", "target_out_dir") +
          "/avvolumecomponent.abc"
  output = target_out_dir + "/avvolumecomponent_abc.o"
  dep = ":gen_avvolumecomponent_abc"
}

gen_obj("avvolumecomponent_abc_preview") {
  input = get_label_info(":gen_avvolumecomponent_abc", "target_out_dir") +
          "/avvolumecomponent.abc"
  output = target_out_dir + "/avvolumecomponent_abc.c"
  snapshot_dep = [ ":gen_avvolumecomponent_abc" ]
}

ohos_shared_library("avvolumecomponent") {
  sources = [ "avvolumecomponent.cpp" ]

  if (use_mingw_win || use_mac || use_linux) {
    deps = [ ":gen_obj_src_avvolumecomponent_abc_preview" ]
  } else {
    deps = [ ":avvolumecomponent_abc" ]
  }
  defines = []
  if (use_mingw_win) {
    defines += [ "WINDOWS_PLATFORM" ]
  } else if (use_mac) {
    defines += [ "MAC_PLATFORM" ]
  } else if (use_linux) {
    defines += [ "LINUX_PLATFORM" ]
  }

  external_deps = [ "napi:ace_napi" ]

  relative_install_dir = "module/multimedia"
  subsystem_name = "multimedia"
  part_name = "av_session"
}
