# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_session/config.gni")

openssl_dir = "//third_party/openssl"
config("avsession_utils_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("avsession_utils") {
  install_enable = true
  sanitize = {
    cfi = true
    debug = false
  }
  sources = [
    "src/avsession_event_handler.cpp",
    "src/avsession_sysevent.cpp",
    "src/hash_calculator.cpp",
  ]

  include_dirs = [
    "./../interfaces/inner_api/native/session/include",
    "$openssl_dir/include/",
  ]

  public_configs = [ ":avsession_utils_config" ]

  deps = [ "//third_party/openssl:libcrypto_shared" ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
  ]

  if (multimedia_av_session_enable_trace_control) {
    cflags = [ "-DENBABLE_AVSESSION_TRACE_CONTROL" ]
    external_deps += [ "hitrace_native:hitrace_meter" ]
  }
  if (multimedia_av_session_enable_sysevent_control) {
    cflags += [ "-DENABLE_AVSESSION_SYSEVENT_CONTROL" ]
    external_deps += [ "hisysevent_native:libhisysevent" ]
  }

  subsystem_name = "multimedia"
  part_name = "multimedia_av_session"
}
