# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("avsession_common_config") {
  include_dirs = [ "../../interfaces/inner_api/native/session/include" ]
}

ohos_shared_library("avsession_common") {
  install_enable = true
  sanitize = {
    cfi = true
    debug = false
  }
  sources = [
    "src/av_file_descriptor.cpp",
    "src/avcast_control_command.cpp",
    "src/avcast_player_state.cpp",
    "src/avcontrol_command.cpp",
    "src/avmedia_description.cpp",
    "src/avmeta_data.cpp",
    "src/avplayback_state.cpp",
    "src/avqueue_item.cpp",
    "src/avsession_descriptor.cpp",
    "src/avsession_pixel_map.cpp",
    "src/media_info.cpp",
    "src/media_info_holder.cpp",
  ]

  public_configs = [ ":avsession_common_config" ]

  public_deps = [ "../../utils:avsession_utils" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "hilog:libhilog",
  ]

  subsystem_name = "multimedia"
  innerapi_tags = [ "platformsdk" ]
  part_name = "av_session"
}
