# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../config.gni")

etc_file = {
  if (av_session_enable_start_stop_on_demand) {
    sa_profile_json = "./on_demand/avsession_service.cfg"
  } else {
    sa_profile_json = "avsession_service.cfg"
  }
}

ohos_prebuilt_etc("avsession_service.rc") {
  source = etc_file.sa_profile_json
  relative_install_dir = "init"
  part_name = "av_session"
  subsystem_name = "multimedia"
}

ohos_prebuilt_etc("ohos.para.dac") {
  source = "avsession.para.dac"
  module_install_dir = "etc/param"
  part_name = "av_session"
  subsystem_name = "multimedia"
}
